[package]
name = "keep_the_keep_moving"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.3"
bevy_ecs_tilemap = "0.15.0"
bevy_rand = "0.9"
bevy_prng = { version = "0.9", features = ["wyrand"] }
leafwing-input-manager = "0.16.0"
rand = "0.8"
rand_core = "0.6"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
